--- a/Project1/Project_description.Rmd
+++ b/Project1/Project_description.Rmd
@@ -185,7 +185,6 @@ an_kmp$`Pr(>F)`
 ```{r}
 library(dplyr)
 library(ggpubr)
-setwd('/Users/PM/Dropbox/Genome_scale_algorithms/Genome_scale_algorithms/Project1')
 df_Naive = read.csv("Test ExactSubstring_Naive.csv", header = FALSE)
 df_KMP = read.csv("Test ExactSubstring_KMP.csv", header = FALSE)
 colnames(df_Naive) = c("Function", "Time", "n", "m", "z", "RunName")
@@ -216,26 +215,27 @@ fig <- ploting(df_Naive, df_KMP)
       #a <- qplot(y = Constant_n$Time/Constant_n$m, x = Constant_n$m) + ylim(0,0.001)
       #b <- qplot(y = Constant_m$Time/Constant_m$n, x = Constant_m$n) + ylim(0,2.5*10^-6)
 
-      a <- ggplot(data = fig[[1]]) + 
+      constant_n_1 <- ggplot(data = fig[[1]]) + 
         geom_point(mapping = aes(y = Time/m, x = m, color = Type)) + theme_bw() +  scale_y_log10() 
+      constant_m_n_linear <- ggplot(data = fig[[2]]) + theme_bw() +
+        geom_point(mapping = aes(y = Time/n, x = n, color = Type))+  scale_y_log10() 
+      constant_m_non_linear <- ggplot(data = fig[[2]]) + theme_bw() +
+        geom_point(mapping = aes(y = Time/n^2, x = n, color = Type))+  scale_y_log10() 
+      constant_m_linear <- ggplot(data = fig[[2]]) +
+        geom_point(mapping = aes(y = Time*10^4, x = n, color = Type)) + 
+        geom_smooth(method = "lm", mapping = aes(y = Time*10^4, x = n, color = Type)) + theme_bw() 
       
-      b <- ggplot(data = fig[[2]]) + theme_bw() +
-        geom_point(mapping = aes(y = Time/n, x = n, color = Type))  + scale_y_log10() 
-      c <- ggplot(data = fig[[2]]) +
-        geom_point(mapping = aes(y = Time*10^4, x = n, color = Type)) + geom_smooth(method = "lm", mapping = aes(y = Time*10^4, x = n)) + theme_bw()
       
-      d <- ggplot(data = fig[[1]]) + 
-        geom_point(mapping = aes(y = Time/m, x = m, color = Type)) + theme_bw() +  scale_y_log10() 
-      
-      e <- ggplot(data = fig[[2]]) + theme_bw() +
-        geom_point(mapping = aes(y = Time/n, x = n, color = Type))  + scale_y_log10() 
-      
-      f <- ggplot(data = fig[[2]]) +
-      geom_point(mapping = aes(y = Time*10^4, x = n, color = Type)) + geom_smooth(method = "lm",mapping = aes(y = Time*10^4, x = n)) + theme_bw()
+      # constant_n_2 <- ggplot(data = fig[[1]]) + 
+      #   geom_point(mapping = aes(y = Time/m, x = m, color = Type)) + theme_bw() +  scale_y_log10() 
+      # constant_m_2<- ggplot(data = fig[[2]]) + theme_bw() +
+      #   geom_point(mapping = aes(y = Time/n, x = n, color = Type))  + scale_y_log10() 
+      # constant_n_linear <- ggplot(data = fig[[2]]) +
+      # geom_point(mapping = aes(y = Time*10^4, x = n, color = Type)) + geom_smooth(method = "lm",mapping = aes(y = Time*10^4, x = n)) + theme_bw()
 
-ggarrange(a, b, c, d, e, f,
-      labels = c('A', 'B', 'C', 'D', 'E', 'F'),
-      ncol = 3, nrow = 2)
+ggarrange(constant_n_1, constant_m_n_linear,constant_m_non_linear,constant_m_linear,
+      labels = c('Constant n - Time/m', 'Constant m: Time/n','Constant m: Time/n^2', 'Constant n:'),
+      ncol = 2, nrow = 2)
 
 
 
